[package]
name = "wgpu-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
humansize = "2"
pollster = "0.3"
wgpu = { version = "0.17", git = "https://github.com/gfx-rs/wgpu.git", rev = "37458cb4da925959348805df75ed12c6f08dd99e" }

[patch.crates-io]
metal = { version = "0.26", git = "https://github.com/Wumpf/metal-rs", branch = "more-timer-support" }
